# cloud_pi

./: Cargo.toml
src/: main.rs
static/: index.html
