[package]
name = "cloud_pi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
rand = "0.8.5"
rocket = { version = "0.5.0-rc.4", features = ["json"] }
serde = { version = "1.0.192", features = ["derive"] }
